# EDSST

./: .gitignore  README.md  boxel_log  config.default.toml  edsst.py  esst.py  main.py  pyproject.toml  test.json
src/: program.py  util.py  version.py
src/bios/: __init__.py  aleoida.py  amphoraplant.py  anemone.py  bacterium.py  barkmound.py  braintrees.py  cactoida.py  clypeus.py  concha.py  crystalline.py  electricae.py  fonticula.py  frutexa.py  fumerola.py  fungoida.py  genus.py  osseus.py  recepta.py  sinuoustuber.py  species.py  stratum.py  tubas.py  tussock.py
src/modules/: boxelsurvey.py  chatboxrelay.py  core.py  densitynavroutesurvey.py  dw3densitycolumnsurvey.py  edsm.py  examplemodule.py  fssreporter.py  module.py
src/modules/eddn/: eddn.py
src/modules/eddn/schemas/: codexentry-v1.0.json  fssallbodiesfound-v1.0.json  fssbodysignals-v1.0.json  fssdiscoveryscan-v1.0.json  journal-v1.0.json  navroute-v1.0.json  scanbarycentre-v1.0.json
